--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@remix-run/vercel": "^1.14.0",
     "@vercel/node": "^2.6.2",
     "isbot": "latest",
+    "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
